fixed funky tabs to instantiate rails obj to javascript obj for faster loading, fewer shenanigans

--- a/app/views/funky_tabs/update/_render_funky_tabs.html.erb
+++ b/app/views/funky_tabs/update/_render_funky_tabs.html.erb
@@ -11,6 +11,8 @@
 </div>
 <div style="clear:both;"></div>
 <script type="text/javascript">
+<%= raw(@path_from_hash_arr) %>
+
 function selectFunkyTab(tab_index){
         jQuery('div#funky_tabs li.funky_tabs_list').removeClass('selected_tab');
         jQuery('ul.css-tabs li#funky_tabs_list-'+tab_index).addClass('selected_tab');
@@ -24,17 +26,35 @@ function selectFunkyTab(tab_index){
         <%= FunkyTabs.tab_select_callback.gsub(/:tab_number/,'tab_index') unless FunkyTabs.tab_select_callback.nil? %>
 }
 function funkyTabsAjaxCall(location_hash){
-        call_hash_change = false;
         jQuery('div#funky_tabs div.funky_tab').html("<%= raw(FunkyTabs.loading_html) %>");
+
+        if((typeof(location_hash)=="string") && (location_hash.indexOf("#") != -1)){
+                location_hash = location_hash.replace("#","");
+        }
+
+        var tab_action_id = "";
+        location_hash = ''+location_hash;
+
+        var hash_components = location_hash.split("-");
+        var hash_lookup = hash_components[0];
+        if(hash_components.length > 1){
+                hash_lookup = hash_lookup + "-" + hash_components[1];
+        }
+        if(hash_components.length > 2){
+                tab_action_id = hash_components[2];
+        }
+
+
         window.location.hash = location_hash;
-        jQuery("div#funky_tabs div.selected_tab_div").load("/funky_tabs/update/funky_tab_action?location_hash="+location_hash);
+
+        var path = path_from_hash_arr[hash_lookup];
+        if(tab_action_id != ""){
+                path = path.replace("?","?id="+tab_action_id+"&");
+        }
+        jQuery("div#funky_tabs div.selected_tab_div").load(path+'&location_hash='+location_hash);
 }
 function hashChangeEvent(){
-        if(call_hash_change){
-                funkyTabsAjaxCall(location.hash.replace("#",""));
-        } else {
-                call_hash_change = true;
-        }
+        funkyTabsAjaxCall(location.hash);
 }
 if(typeof(jQuery(window).hashchange) == "undefined"){
         // dont have special plugin, so use onhashchange event. NOTE: this will not work in ie 6 or 7
@@ -44,7 +64,6 @@ if(typeof(jQuery(window).hashchange) == "undefined"){
         jQuery(window).hashchange(hashChangeEvent);
 }
 var load_on_select = true;
-var call_hash_change = true;
 jQuery(function() {
         var initial_tab = <%= FunkyTabs.default_tab_index %>;
         if(window.location.hash != ""){
